New shortcut keys added to adjust left and right player cropping during calibration

--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -1265,6 +1265,10 @@ BEGIN
     VK_F9,          IDM_TELETEXT_KEY5,      VIRTKEY, NOINVERT
     VK_HOME,        IDM_CHANNEL_LIST,       VIRTKEY, NOINVERT
     VK_LEFT,        IDM_VT_PAGE_MINUS,      VIRTKEY, NOINVERT
+    VK_LEFT,        IDM_RIGHT_CROP_MINUS,   VIRTKEY, CONTROL, NOINVERT
+    VK_LEFT,        IDM_LEFT_CROP_PLUS,     VIRTKEY, SHIFT, NOINVERT
+    VK_LEFT,        IDM_LEFT_CROP_CURRENT,  VIRTKEY, SHIFT, CONTROL, 
+                                                    NOINVERT
     VK_NEXT,        IDM_CHANNELMINUS,       VIRTKEY, NOINVERT
     VK_NUMPAD2,     IDM_WINPOS_VERT_BOTTOM, VIRTKEY, CONTROL, NOINVERT
     VK_NUMPAD5,     IDM_WINPOS_VERT_CENTRE, VIRTKEY, CONTROL, NOINVERT
@@ -1274,6 +1278,10 @@ BEGIN
     VK_RETURN,      IDM_TOGGLECURSOR,       VIRTKEY, CONTROL, NOINVERT
     VK_RETURN,      IDM_FULL_SCREEN,        VIRTKEY, ALT, NOINVERT
     VK_RIGHT,       IDM_VT_PAGE_PLUS,       VIRTKEY, NOINVERT
+    VK_RIGHT,       IDM_RIGHT_CROP_PLUS,    VIRTKEY, CONTROL, NOINVERT
+    VK_RIGHT,       IDM_LEFT_CROP_MINUS,    VIRTKEY, SHIFT, NOINVERT
+    VK_RIGHT,       IDM_RIGHT_CROP_CURRENT, VIRTKEY, SHIFT, CONTROL, 
+                                                    NOINVERT
     VK_SPACE,       IDM_SPACEBAR,           VIRTKEY, NOINVERT
     VK_SPACE,       IDM_SHIFT_SPACEBAR,     VIRTKEY, SHIFT, NOINVERT
     VK_SUBTRACT,    IDM_VOLUMEMINUS,        VIRTKEY, NOINVERT
