--- a/Deinterlace/Deinterlace.rc
+++ b/Deinterlace/Deinterlace.rc
@@ -52,13 +52,11 @@ END
 // Dialog
 //
 
-IDD_DEINTERLACEPROP DIALOGEX 0, 0, 231, 127
+IDD_DEINTERLACEPROP DIALOG DISCARDABLE  0, 0, 231, 127
 STYLE WS_CHILD
 FONT 8, "MS Shell Dlg"
 BEGIN
     GROUPBOX        "Deinterlace Type",IDS_STATIC,6,78,208,38
-    CONTROL         "Type 3",IDC_TYPE3,"Button",BS_AUTORADIOBUTTON,135,88,41,
-                    12
     CONTROL         "Blended Clipping",IDC_TYPE2,"Button",BS_AUTORADIOBUTTON,
                     61,100,69,12
     CONTROL         "Two Frame",IDC_TYPE1,"Button",BS_AUTORADIOBUTTON,61,88,
@@ -67,12 +65,12 @@ BEGIN
     CONTROL         "Weave",IDC_WEAVE,"Button",BS_AUTORADIOBUTTON,13,88,44,
                     12
     LTEXT           "Deinterlace DirectShow Filter",IDS_STATIC,68,0,94,10
-    CTEXT           "Copyright (c) 2000-01 John Adcock, Peter Gubanov",
-                    IDS_STATIC,27,9,177,10,0,WS_EX_RIGHT
-    LTEXT           "Deinterlace comes with ABSOLUTELY NO WARRANTY.  This software in licenced under the terms of the GNU GPL for details see http://www.fsf.net/copyleft/gpl.html",
-                    IDS_STATIC,1,20,220,25
-    LTEXT           "The Sourceforge project page for this project is http://deinterlace.sourceforge.net/",
-                    IDS_STATIC,0,49,220,17
+    CTEXT           "Copyright (c) 2000-01 John Adcock, Peter Gubanov, Tom Barry, Steve Grimm, Mark Rejhon, Micheal Eskin",
+                    IDS_STATIC,3,12,225,21
+    LTEXT           "Deinterlace.ax comes with ABSOLUTELY NO WARRANTY.  This software in licenced under the terms of the GNU GPL for details see http://www.fsf.net/copyleft/gpl.html",
+                    IDS_STATIC,1,32,220,25
+    LTEXT           "The home page for this project is http://www.dscaler.org/",
+                    IDS_STATIC,0,63,220,17
 END
 
 
@@ -83,8 +81,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,0
- PRODUCTVERSION 1,0,0,0
+ FILEVERSION 1,1,0,0
+ PRODUCTVERSION 1,1,0,0
  FILEFLAGSMASK 0x30003fL
 #ifdef _DEBUG
  FILEFLAGS 0xbL
@@ -100,18 +98,18 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "ActiveMovie", "Filter dll\0"
-            VALUE "Comments", "\0"
-            VALUE "CompanyName", "John Adcock\0"
+            VALUE "Comments", "Authors: John Adcock, Tom Barry, Steve Grimm, Peter Gubanov, Mark Rejhon, Michael Eskin\0"
+            VALUE "CompanyName", "DScaler Project, see  http://www.dscaler.org/\0"
             VALUE "FileDescription", "Deinterlace Filter\0"
-            VALUE "FileVersion", "1.00\0"
+            VALUE "FileVersion", "1.1.0\0"
             VALUE "InternalName", "Deinterlace.ax\0"
-            VALUE "LegalCopyright", "Copyright (C) 2000 John Adcock\0"
-            VALUE "LegalTrademarks", "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2000, 2001 DScaler Project\0"
+            VALUE "LegalTrademarks", "This file is released under the terms of the GNU GPL\0"
             VALUE "OLESelfRegister", "AM20\0"
             VALUE "OriginalFilename", "Deinterlace.ax\0"
             VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "\0"
-            VALUE "ProductVersion", "1.00\0"
+            VALUE "ProductVersion", "1.1.0\0"
             VALUE "SpecialBuild", "\0"
         END
     END
