--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -341,7 +341,7 @@ BEGIN
     LTEXT           "I2C Interface Copyright (c) Gerd Knorr",IDC_STATIC,13,
                     177,160,10
     GROUPBOX        "Support",IDC_STATIC,192,37,180,100
-    LTEXT           "The best place to get support for DScaler is the Home Theater Computers foum at the AV Science Forums.",
+    LTEXT           "The best place to get support for DScaler is the Home Theater Computers forum at the AV Science Forums.",
                     IDC_STATIC,200,47,166,27
     LTEXT           "Eric Schmidt\nMuljadi Budiman\nLindsey Dubb\nMike Temperton",
                     IDC_STATIC,103,52,74,81
