--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -488,12 +488,12 @@ BEGIN
                     155,156,10
 END
 
-IDD_ABOUT DIALOGEX 22, 17, 374, 274
+IDD_ABOUT DIALOG DISCARDABLE  22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About DScaler"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
+    DEFPUSHBUTTON   "OK",IDOK,305,9,58,19
     CTEXT           "DScaler Version 4.x",IDC_VERSION,0,3,293,9
     CTEXT           "Copyright (C) 2000, 2001 John Adcock",IDC_STATIC,0,24,
                     293,10
@@ -1209,6 +1209,7 @@ BEGIN
     IDD_ABOUT, DIALOG
     BEGIN
         RIGHTMARGIN, 372
+        TOPMARGIN, 3
     END
 
     IDD_SELECTCARD, DIALOG
