--- a/DScaler/Plugins/DI_GreedyH/DI_GreedyH.RC
+++ b/DScaler/Plugins/DI_GreedyH/DI_GreedyH.RC
@@ -28,7 +28,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-GREEDYH DIALOGEX 0, 0, 432, 215
+GREEDYH DIALOGEX 0, 0, 432, 246
 STYLE DS_SETFOREGROUND | DS_3DLOOK | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Greedy High Motion Controls"
@@ -50,14 +50,15 @@ BEGIN
     CONTROL         "Auto Pull-Down",IDC_USE_PULLDOWN,"Button",
                     BS_AUTOCHECKBOX | BS_LEFTTEXT | BS_LEFT | BS_TOP | 
                     WS_TABSTOP,4,4,74,11
-    CONTROL         "Vertical Filter",IDC_USE_VERT_FILTER,"Button",
+    CONTROL         "V. Sharpness",IDC_USE_V_SHARPNESS,"Button",
                     BS_AUTOCHECKBOX | BS_LEFTTEXT | BS_TOP | WS_TABSTOP,94,
-                    17,75,11
+                    32,75,11
     CONTROL         "In-Between Frames",IDC_USE_IN_BETWEEN,"Button",
                     BS_AUTOCHECKBOX | BS_LEFTTEXT | BS_TOP | WS_TABSTOP,94,4,
                     75,11
-    CONTROL         "Edge Enhance",IDC_USE_EDGE_ENH,"Button",BS_AUTOCHECKBOX | 
-                    BS_LEFTTEXT | BS_TOP | WS_TABSTOP,94,30,75,11
+    CONTROL         "H. Sharpness",IDC_USE_H_SHARPNESS,"Button",
+                    BS_AUTOCHECKBOX | BS_LEFTTEXT | BS_TOP | WS_TABSTOP,94,
+                    18,75,11
     CONTROL         "Slider1",IDC_MOTION_THRESHOLD,"msctls_trackbar32",
                     TBS_TOP | TBS_NOTICKS | TBS_ENABLESELRANGE | WS_GROUP | 
                     WS_TABSTOP,4,123,83,10,WS_EX_TRANSPARENT
@@ -71,7 +72,7 @@ BEGIN
     LTEXT           "Good PullDown Lvl",IDC_STATIC,4,154,69,8
     LTEXT           "Bad PullDown Lvl",IDC_STATIC,89,154,60,8
     LTEXT           "Low Motion PD Lvl",IDC_STATIC,89,133,60,8
-    CONTROL         "Slider1",IDC_EDGE_ENH,"msctls_trackbar32",TBS_TOP | 
+    CONTROL         "Slider1",IDC_H_SHARPNESS,"msctls_trackbar32",TBS_TOP | 
                     TBS_NOTICKS | TBS_ENABLESELRANGE | WS_GROUP | WS_TABSTOP,
                     4,184,83,10,WS_EX_TRANSPARENT
     CONTROL         "Slider1",IDC_LOW_MOTION_PD_LVL,"msctls_trackbar32",
@@ -86,7 +87,7 @@ BEGIN
     CONTROL         "Slider1",IDC_MEDIAN_FILTER,"msctls_trackbar32",TBS_TOP | 
                     TBS_NOTICKS | TBS_ENABLESELRANGE | WS_GROUP | WS_TABSTOP,
                     89,184,83,10,WS_EX_TRANSPARENT
-    RTEXT           "0",IDC_EDGE_ENH_V,65,174,19,9,SS_NOPREFIX | NOT 
+    RTEXT           "0",IDC_H_SHARPNESS_V,65,174,19,9,SS_NOPREFIX | NOT 
                     WS_GROUP
     RTEXT           "0",IDC_MOTION_SENSE_V,149,112,19,9,SS_NOPREFIX | NOT 
                     WS_GROUP
@@ -98,7 +99,7 @@ BEGIN
                     NOT WS_GROUP
     RTEXT           "0",IDC_MEDIAN_FILTER_V,149,174,19,9,SS_NOPREFIX | NOT 
                     WS_GROUP
-    LTEXT           "Edge Enhance",IDC_STATIC,4,174,62,8
+    LTEXT           "H. Sharpness",IDC_STATIC,4,174,62,8
     LTEXT           "Median Filter",IDC_STATIC,89,174,60,8
     RTEXT           "Comb",IDC_STATIC,231,4,19,8
     RTEXT           "0",IDC_COMB0,228,13,22,8
@@ -133,7 +134,7 @@ BEGIN
     LTEXT           " 0",IDC_FLAG8,384,85,37,8
     LTEXT           " 0",IDC_FLAG9,384,94,37,8
     LTEXT           " 0",IDC_FLAG2,384,31,37,8
-    PUSHBUTTON      "Diagnostics",IDC_DIAG,65,197,47,14
+    PUSHBUTTON      "Diagnostics",IDC_DIAG,65,220,47,14
     RTEXT           "0",IDC_COMB10,228,103,22,8
     RTEXT           "0",IDC_COMB11,228,112,22,8
     RTEXT           "0",IDC_COMB12,228,121,22,8
@@ -165,7 +166,7 @@ BEGIN
     RTEXT           " 0",IDC_MOTION12,290,121,22,8
     RTEXT           " 0",IDC_MOTION13,290,130,22,8
     RTEXT           " 0",IDC_MOTION14,290,139,22,8
-    PUSHBUTTON      "Refresh",IDC_REFRESH,293,197,38,14
+    PUSHBUTTON      "Refresh",IDC_REFRESH,293,220,38,14
     RTEXT           "Kontrast",IDC_FLAGS3,255,4,27,8
     RTEXT           "0",IDC_KONTRAST0,259,13,22,8
     RTEXT           "0",IDC_KONTRAST1,259,22,22,8
@@ -198,6 +199,12 @@ BEGIN
     RTEXT           "0",IDC_COMBK12,352,121,22,8
     RTEXT           "0",IDC_COMBK13,352,130,22,8
     RTEXT           "0",IDC_COMBK14,352,139,22,8
+    CONTROL         "Slider1",IDC_V_SHARPNESS,"msctls_trackbar32",TBS_TOP | 
+                    TBS_NOTICKS | TBS_ENABLESELRANGE | WS_GROUP | WS_TABSTOP,
+                    4,206,83,10,WS_EX_TRANSPARENT
+    RTEXT           "0",IDC_V_SHARPNESS_V,66,196,19,9,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "V. Sharpness",IDC_STATIC,4,196,62,8
 END
 
 
@@ -243,7 +250,7 @@ BEGIN
         RIGHTMARGIN, 429
         VERTGUIDE, 158
         TOPMARGIN, 4
-        BOTTOMMARGIN, 209
+        BOTTOMMARGIN, 240
         HORZGUIDE, 4
     END
 END
